
        News and upgrading information for Gedafe
        =========================================

(arrows indicate actions that you should make when upgrading)
------------------------------------------------------------------
HEAD    (2004-03-12)
	Long comments 
	Long comments can be saved per table in meta_tables. This
	is displayed in the entry screen but also in tooltips
	and table headers.
	Added id colums to meta_fields and meta_tables. This makes
	it possible to edit them in phpPgmyadmin, and to add more
	then one attribute to a table(+field). 
	To make it bullet proof, one should add a 
	UNIQUE (meta_tables_table,meta_tables_attribute) constraint 
	to meta_tables and a similar constraint on meta_fields:
        UNIQUE (meta_fields_table,meta_fields_field,meta_fields_attribute)

	Tested including the changed demo1.sql script
			Johannes
------------------------------------------------------------------
HEAD    (2004-03-10)
	Checked in agreed upon fix to schema code with 
	robust defaults for schema and schema search path
	Still work to to....
			Johannes
------------------------------------------------------------------
HEAD    (2004-03-09)
	Fixed minor warnings in DB.pm and GUI.pm 
			Johannes
------------------------------------------------------------------
HEAD    (2004-03-05) 
	fix schema code when no schema is defined
			author: dws
	Re-Tested by Johannes
------------------------------------------------------------------
HEAD    (2004-03-01)

* Fixed schema support: Add default value for "schema" config value.
	Patch waiting for Freek Zindels Comments.

------------------------------------------------------------------
HEAD    (2004-02-13)

* Added widget radio button

  MODIFIED FILES:
	/usr/cvs/gedafe/gedafe/doc/gedafe-sql.pod,v
	/usr/cvs/gedafe/gedafe/lib/perl/Gedafe/GUI.pm,v
 (Johannes)
------------------------------------------------------------------
HEAD    (2004-02-12)
* Made 2 column edit/add layout configurable
